##Text encoding: utf-8

2004-05-29  Jean Bréfort  <jean.brefort@ac-dijon.fr>
	* gcu/object.h,
	* gcu/object.cc: added throw (invalid_argument) to Object::Build.

2004-05-21  Jean Bréfort  <jean.brefort@ac-dijon.fr>
	* gcu/object.cc: fixed a stupid bug in Object::AddType.

2004-05-20  Jean Bréfort  <jean.brefort@ac-dijon.fr>
	* gcu/bond.h,
	* gcu/crystalatom.h,
	* gcu/crystalbond.h,
	* gcu/crystalcleavage.cc,
	* gcu/crystalcleavage.h,
	* gcu/crystaldoc.h,
	* gcu/crystalline.h,
	* gcu/crystalview.h,
	* gcu/document.h,
	* gcu/element.cc,
	* gcu/element.h,
	* gcu/gtkchem3dviewer.h,
	* gcu/gtkcrystalviewer.h,
	* gcu/gtkperiodic.h,
	* gcu/matrix.h,
	* gcu/matrix2d.h: Updated docs
	* gcu/object.cc,
	* gcu/object.h: Added several new methods related to the document structure and
	updated the documentatioh.

2004-05-02  Jean Bréfort  <jean.brefort@ac-dijon.fr>
	* gcu/Makefile.am: add new matrix2d.* files
	* gcu/object.cc,
	* gcu/object.h: add virtual Transform2D method to support 2D transforms (flip and rotation).
	* gcu/atom.cc,
	* gcu/atom.h: implements Transform2D
	* gcu/bond.cc,
	* gcu/bond.h: implements Move and Transform2D to avoid execution of Object methods.
	* gcu/matrix.cc,
	* gcu/matrix.h: minor changes (replaces gdouble by double).
	* gcu/matrix2d.cc,
	* gcu/matrix2d.h: new Matrix2D class used with Object::Transform2D.
	* tests/Makefile.am: remove obsolete dependencies.

2004-04-09  Jean Bréfort  <jean.brefort@ac-dijon.fr>
	* gcu/atom.h: minor update
	* gcu/bonobo-control.cc: fixed factory and control id
	* gcu/document.cc:
	* gcu/document.h: implemented Document class
	* gcu/object.cc:
	* gcu/object.h: use Document class
	* tests/testbonobocontrol.c: (create_app), (main): use unstable control
	and removed libgnome and libgnomeui dependencies.

2004-04-07 Jean Bréfort  <jean.brefort@ac-dijon.fr>
	* moved all libraries sources to the new gcu directory and
	merged the four libraries in one (libgcu-0.3).
	* changed every necessary things to make things compile and